# strassen_openmp

strassen-matrix-multiplication/: CMakeLists.txt  Makefile  README.md
strassen-matrix-multiplication/src/: main.cpp  matrix.cpp  matrix.h  strassen.cpp  strassen.h
strassen-matrix-multiplication/tests/: test_multiplication.cpp
